2009/02/04 (TS):
 - lanIpBasic.c:
    o BUGFIX: getrbuf() dereferenced NULL pointer if no buffers
      were available.
    o Added counter for #of times getrbuf() failed due to lack of buffers.
    o verify that destination IP is on same subnet as interface. Let
      'arpLookup()' return -ENETUNREACH otherwise. This affects udpSock
      calls like udpSockConnect(), udpSockSendTo(), udpSockSendBufTo().
    o pass return status of udpSockHdrsInitFromIf() on rather than returning
      -ENOTCONN if the call fails.
2009/01/06 (TS):
 - lanIpBasic.h, lanIpBasic.c, lanIpBasicTest.c, drvUdpSock.c: Added 'flags'
   argument to udpSockConnect() and a UDPSOCK_MCPASS flag. When this is set
   and the peer IP address is a multicast address then -- deviating from BSD
   semantics -- the source IP address and port of incoming packets are allowed
   to differ from the connected peer's.
2009/12/15 (TS):
 - drvLan9118.c, drvLan9118.h: added 'drvLan9118BcFilterSet()' for controlling
   the bcast filter bit independently from/after 'setup'.
2009/12/14 (TS):
 - lanIpBasic.c, lanIpProto.h: added 'may_alias' attribute to several unions
   that are used for deliberate type-punning.
2009/12/14 (TS):
 - lanIpBasicSetup.h: BUGFIX -- had missed to declare lanIpIf as 'extern' :-(
   so it would end up being multiply defined.
2009/12/09 (TS):
 - lanIpBasic.c, lanIpBasic.h: Added lanIpBscGetStats()/lanIpBscFreeStats()
   for obtaining 'machine-readable' summary statistics.
2009/12/09 (TS):
 - lanIpBasic.c:
     o BUGFIX - _udpSockSendTo_internal() would not send if driver
                provided NETDRV_SND_PACKET() and a buffer was passed.
     o update num_rbufs in config struct when new buffers are added
       so that reading the config struct always reflects the correct
       amount.
     o Added (many) statistics counters.
 - lanIpBasic.c, lanIpBasic.h:
	 o Added lanIpBscDumpIfStats(), lanIpBscDumpConfig().
 - Makefile.am: Added lanIpBasic.c to EXTRA_liblanIpBasic_mve_a_SOURCES.